unpackaged/main/default/objects/ABA_File_Header__c/ABA_File_Header__c.object-meta.xml
<CustomObject>
    <label>ABA File Header</label>
    <nameField>
        <displayFormat>AFL-{0000}</displayFormat>
        <label>ABA_File_Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABA File Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>