unpackaged/main/default/objects/ABA_File_Header__c/fields/Blank_Placeholder_1__c.field-meta.xml
<CustomField>
    <fullName>Blank_Placeholder_1__c</fullName>
    <label>Blank Placeholder 1</label>
    <length>17</length>
    <type>Text</type>
</CustomField>