unpackaged/main/default/objects/ABA_File_Header__c/fields/Description_of_entries__c.field-meta.xml
<CustomField>
    <fullName>Description_of_entries__c</fullName>
    <description>All coded character set valid. Must not be all blanks. Left justified,
blank filled.</description>
    <inlineHelpText>All coded character set valid. Must not be all blanks. Left justified,
blank filled.</inlineHelpText>
    <label>Description of entries</label>
    <length>12</length>
    <type>Text</type>
</CustomField>