unpackaged/main/default/objects/ABA_File_Header__c/fields/Name_of_Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Financial_Institution__c</fullName>
    <description>Must be approved Financial Institution abbreviation.
Westpac's abbreviation is "WBC".</description>
    <inlineHelpText>Must be approved Financial Institution abbreviation.
Westpac's abbreviation is "WBC".</inlineHelpText>
    <label>Name of Financial Institution</label>
    <length>3</length>
    <type>Text</type>
</CustomField>