unpackaged/main/default/objects/ABA_File_Header__c/fields/Name_of_user_supplying_file__c.field-meta.xml
<CustomField>
    <fullName>Name_of_user_supplying_file__c</fullName>
    <description>Must be User Preferred Specification as advised in Application. Left
justified, blank filled.
All coded character set valid. Must not be all blanks.</description>
    <inlineHelpText>Must be User Preferred Specification as advised in Application. Left
justified, blank filled.
All coded character set valid. Must not be all blanks.</inlineHelpText>
    <label>Name of user supplying file</label>
    <length>26</length>
    <type>Text</type>
</CustomField>