unpackaged/main/default/objects/ABA_File_Header__c/fields/Number_of_user_supplying_file__c.field-meta.xml
<CustomField>
    <fullName>Number_of_user_supplying_file__c</fullName>
    <description>Must be User Identification Number which is allocated by APCA.
Must be numeric, right justified, zero filled.</description>
    <inlineHelpText>Must be User Identification Number which is allocated by APCA.
Must be numeric, right justified, zero filled.</inlineHelpText>
    <label>Number of user supplying file</label>
    <length>6</length>
    <type>Text</type>
</CustomField>