unpackaged/main/default/objects/ABA_File_Header__c/fields/Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>Processing_Date__c</fullName>
    <description>Must be numeric in the format of DDMMYY.
Must be a valid date.
Zero filled.</description>
    <inlineHelpText>Must be numeric in the format of DDMMYY.
Must be a valid date.
Zero filled.</inlineHelpText>
    <label>Processing Date</label>
    <length>6</length>
    <type>Text</type>
</CustomField>