unpackaged/main/default/objects/ABA_File_Header__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <defaultValue>'0'</defaultValue>
    <description>Must be '0'</description>
    <inlineHelpText>Must be '0'</inlineHelpText>
    <label>Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>