unpackaged/main/default/objects/ABA_File_Header__c/fields/Reel_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Reel_Sequence_Number__c</fullName>
    <description>Must be 01.
Right justified. Zero filled</description>
    <inlineHelpText>Must be 01.
Right justified. Zero filled</inlineHelpText>
    <label>Reel Sequence Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>